# raycasting

./: .clang-format  CMakeLists.txt  README.md
assets/: level.txt  map.txt
include/: asset.h  camera.h  common.h  draw.h  map.h  minimap.h  raycast.h  render.h  sprite.h  vector.h  world.h
src/: asset.c  camera.c  draw.c  main.c  map.c  minimap.c  raycast.c  render.c  sprite.c  world.c
